# solar2d-plugin-onnxruntime

./: .gitignore  CMakeLists.txt  Makefile  README.md  plugin_onnxruntime.c
.github/workflows/: build-ort-x86.yml  build-win32-example.yml  build.yml
android/: build.sh  download_ort.sh
example/: build-win32.bat  build.settings  config.lua  deploy-android.sh  main.lua  plugin_Bytemap.js  plugin_onnxruntime.js
ios/: build.sh  download_ort.sh
lua/plugin/: onnxruntime.lua
mac/: build.sh
web/: BUILD_GUIDE.md  DEVELOPMENT_LOG.md  RESEARCH.md  build.sh  example.html  metadata.lua  plugin_onnxruntime.lua  plugin_onnxruntime_js.js  test_js_bridge.html
web/test-html5/: README.md  ort-integration.html  test-ort.html
win32/: build.bat  download_ort.ps1
